# judge

./: .gitignore  .travis.yml  3_setting.txt  CMakeLists.txt  Cargo.toml  ChangeLog  Changelog  Config.py  Dockerfile  Doxyfile  HashDir.py  LICENSE  Makefile  Prefetch.py  Privilege.py  PyExt.py  README.md  RELEASE  Server.py  StdChal.py  Utils.py  build-container.sh  chal.py  check.c  inittool.cpp  judge-dll.cpp  judge-kernel-3.13.5.patch  judge-kernel.patch  judge.cpp  judge.h  judge_app.c  judge_app.h  judge_com.h  judge_def.h  judge_ini.c  judge_ini.h  judge_mod.c  judge_mod.h  judge_proc.c  judge_proc.h  (+26 more)
bench/: file_test.go  io_test.go
docs/: APIs.rst  Config.rst  Core.rst  Docstrings.rst  Guidelines.rst  Makefile  Prefetch.rst  Privilege.rst  PyExt.rst  Server.rst  SpecialJudge.rst  StdChal.rst  TestOJCompatible.rst  conf.py  index.rst  make.bat  modules.rst
hypex/: CMakeLists.txt  Makefile
hypex/src/: sandbox.cpp  utils.cpp  utils.h
hypex/test/: test.c
inc/: core.h  ev.h  sandbox.h  utils.h
include/: contro.h  def.h  ev.h  fog.h  io.h  snap.h  task.h  timer.h
judge/: Cargo.toml
patch/: Makefile  judge-kernel-test.c
sandbox/: Cargo.toml
sandbox/src/: cgroup.rs  lib.rs  process.rs  runner.rs  runner_def.rs
server/: conf.go  config.go  package.go  rest.go  server.go  state.go
server/html/: index.html
server/html/css/: blk-inc.less  blk.css  blk.less  test.less
src/: contro.c  core.cpp  ev.c  ev.cpp  fog.c  io.c  pyext.c  pyext.cpp  sandbox.cpp  snap.c  task.c  timer.c  utils.cpp
tests/: TestAll.py  TestCompile.py  TestDiff.py  TestIORedir.py  TestRequest.py  TestWebSock.py
tests/testdata/: test.cpp  testce.cpp  testre.cpp  testwa.cpp
tests/testdata/res/check/: build  check.cpp
tests/testdata/res_act/: test.cpp
tests/testdata/res_act/check/: build  check.cpp
tmp/code/: main.cpp
